--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
+    "gh-pages": "^6.3.0",
     "postcss-loader": "^8.1.1"
   }
 }
